# ProfileHunter

./: .gitignore  README.md  aux_func.py  db.py  flet_models.py  instrucciones.txt  main.py  models.py  pyproject.toml  rutas.py  scrape_europages_boost.py
_db/: hunts.db
